--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ https://templatemo.com/tm-464-ultra-profile
 			<nav class="collapse navbar-collapse" id="rock-navigation">
 				<ul class="nav navbar-nav navbar-right main-navigation text-uppercase">
 					<li><a href="#home" class="smoothScroll">Home</a></li>
-					<li><a href="#work" class="smoothScroll">My Work</a></li>
+					<li><a href="#work" class="smoothScroll">My Services</a></li>
 					<li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
 					<li><a href="#resume" class="smoothScroll">Resume</a></li>
 					<li><a href="#about" class="smoothScroll">About</a></li>
@@ -56,9 +56,13 @@ https://templatemo.com/tm-464-ultra-profile
 			<div class="row">
 				<div class="col-md-2 col-sm-1"></div>
 				<div class="col-md-8 col-sm-10">
-					<h1 class="tm-home-title"><strong>John White</strong></h1>
-					<h2 class="tm-home-subtitle">Creative Director</h2>
-					<p>I am a professional <strong>UX Designer</strong> and <strong>Front-End Developer</strong> creating modern and responsive designs for <strong>Web</strong> and <strong>Mobile</strong>. Let us work together. Thank you.</p>
+					<h1 class="tm-home-title"><strong>Danny Lucky</strong></h1>
+					<h2 class="tm-home-subtitle">Senior Web Developer</h2>
+					<p>
+						Passionate Senior Web Developer with over 12 years of experience crafting innovative digital solutions.
+						Specialized in full-stack development, modern frameworks, and scalable architectures.
+						Committed to delivering exceptional user experiences and driving business growth through technology.
+					</p>
 					<a href="#work" class="btn btn-default smoothScroll tm-view-more-btn">Let's Begin</a>
 				</div>
 				<div class="col-md-2 col-sm-1"></div>
@@ -72,7 +76,7 @@ https://templatemo.com/tm-464-ultra-profile
 		<div class="container">
 			<div class="row">
 				<div class="col-md-offset-1 col-md-11">
-					<h2 class="title">My <strong>Work</strong></h2>						
+					<h2 class="title">My <strong>Services</strong></h2>						
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="work-wrapper">
