--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ https://templatemo.com/tm-464-ultra-profile
 					<li><a href="#home" class="smoothScroll">Home</a></li>
 					<li><a href="#work" class="smoothScroll">My Services</a></li>
 					<li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
-					<li><a href="#resume" class="smoothScroll">Resume</a></li>
-					<li><a href="#about" class="smoothScroll">About</a></li>
+					<li><a href="#resume" class="smoothScroll">About</a></li>
+					<li><a href="#about" class="smoothScroll">Skills</a></li>
 					<li><a href="#contact" class="smoothScroll">Contact</a></li>
 				</ul>
 			</nav>
@@ -81,25 +81,51 @@ https://templatemo.com/tm-464-ultra-profile
 				<div class="col-md-4 col-sm-4">
 					<div class="work-wrapper">
 						<i class="fa fa-link"></i>
-						<h3 class="text-uppercase tm-work-h3">Mobile UX</h3>
+						<h3 class="text-uppercase tm-work-h3">Full-Stack Development</h3>
 						<hr>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna.</p>
+						<p>
+							End-to-end web application Dev
+						</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="work-wrapper">
 						<i class="fa fa-flash"></i>
-						<h3 class="text-uppercase tm-work-h3">Web Design</h3>
+						<h3 class="text-uppercase tm-work-h3">Technical<br> Consulting</h3>
 						<hr>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna.</p>
+						<p>
+							Architecture and technology strategy
+						</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="work-wrapper">
 						<i class="fa fa-dashboard"></i>
-						<h3 class="text-uppercase tm-work-h3">HTML Templates</h3>
+						<h3 class="text-uppercase tm-work-h3">Code Review & Mentoring</h3>
 						<hr>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna.</p>
+						<p>
+							Team leadership and code quality
+						</p>
+					</div>
+				</div><hr>
+				<div class="col-md-4 col-sm-4">
+					<div class="work-wrapper">
+						<i class="fa fa-flash"></i>
+						<h3 class="text-uppercase tm-work-h3">API<br> Development</h3>
+						<hr>
+						<p>
+							RESTful and GraphQL APIs
+						</p>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-4">
+					<div class="work-wrapper">
+						<i class="fa fa-dashboard"></i>
+						<h3 class="text-uppercase tm-work-h3">Performance Optimization</h3>
+						<hr>
+						<p>
+							Speed and scalability improvements
+						</p>
 					</div>
 				</div>
 			</div>
@@ -113,26 +139,31 @@ https://templatemo.com/tm-464-ultra-profile
 			<div class="row">
 				<div class="col-md-12 wow bounce">
 					<div class="title">
-						<h2 class="tm-portfolio-title">My <strong>Portfolio</strong></h2>
+						<h2 class="title" style="text-align: center;">My <strong>Portfolio</strong></h2>
 					</div>
 
 					<!-- START ISO SECTION -->
 					<div class="iso-section">
-						<ul class="filter-wrapper clearfix">
+						<!-- <ul class="filter-wrapper clearfix">
 							<li><a href="#" class="opc-main-bg selected" data-filter="*">All</a></li>
 							<li><a href="#" class="opc-main-bg" data-filter=".html">HTML</a></li>
 							<li><a href="#" class="opc-main-bg" data-filter=".photoshop">Photoshop</a></li>
 							<li><a href="#" class="opc-main-bg" data-filter=".wordpress">Wordpress</a></li>
 							<li><a href="#" class="opc-main-bg" data-filter=".mobile">Mobile</a></li>
-						</ul>
+						</ul> -->
 						<div class="iso-box-section">
 							<div class="iso-box-wrapper col4-iso-box">
 								<div class="iso-box html photoshop wordpress mobile col-md-3 col-sm-3 col-xs-12">
 									<div class="portfolio-thumb">
-										<img src="images/portfolio-img1.jpg" class="fluid-img" alt="portfolio img">
+										<img src="images/portfolio-img6.jpg" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">UX Design</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonumm.</p>
+											<h3 class="portfolio-item-title">E-Commerce Platform</h3>
+											<p>
+												Full-stack shopping solution with React, Node.js, Stripe integration
+											</p>
+											<p>
+												React, Node.js, MongoDB, Stripe
+											</p>
 										</div>
 									</div>
 								</div>
@@ -214,28 +245,28 @@ https://templatemo.com/tm-464-ultra-profile
 			<div class="row">
 				<div class="col-md-6 col-sm-6">					
 					<h2 class="title">My <strong>Profile</strong></h2>
-					<p><span class="tm-info-label">Name</span> John White</p>
-					<p><span class="tm-info-label">Birthday</span> December 24, 1996</p>
-					<p><span class="tm-info-label">Address</span> Melbourne Victoria 3000 Australia</p>
+					<p><span class="tm-info-label">Name</span> Danny Lucky</p>
+					<p><span class="tm-info-label">Birthday</span> March 2, 2000</p>
+					<p><span class="tm-info-label">Address</span> Denver, CO, United Status</p>
 					<p><span class="tm-info-label">Phone</span> +001 020 0340 | 009 080 0760</p>
-					<p><span class="tm-info-label">Email</span> hello@company.com</p>
-					<p><span class="tm-info-label">Website</span> <a href="#" class="tm-red-text">www.company.com</a></p>
+					<p><span class="tm-info-label">Email</span> ldanny2k32@gmail.com</p>
+					<!-- <p><span class="tm-info-label">Website</span> <a href="#" class="tm-red-text">www.company.com</a></p> -->
 				</div>
 				<div class="col-md-6 col-sm-6">
-					<h2 class="title"><strong>Some</strong> Skills</h2>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
-					<h4 class="tm-progress-label">Bootstrap <small class="progress-percent-small">100%</small></h4>
-					<div class="progress tm-progress">
-						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+					<h2 class="title"><strong>About</strong> Me</h2>
+					<div class="title">
+						<h2>This is <strong>me</strong></h2>
+						<h1 class="tm-red-text"><strong>Senior</strong> Web Development </h1>
 					</div>
-					<h4 class="tm-progress-label">HTML5 <small class="progress-percent-small">90%</small></h4>
-					<div class="progress tm-progress">
-						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
-					</div>
-					<h4 class="tm-progress-label">SEO <small class="progress-percent-small">80%</small></h4>
-					<div class="progress tm-progress">
-						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
-					</div>
+					<p>
+						I'm a results-driven Senior Web Developer with a passion for creating innovative,
+						scalable web applications. With over 12 years of experience in the industry,
+						I've successfully led numerous projects from conception to deployment, working with
+						diverse teams and cutting-edge technologies. My experitise spans across modern
+						JavaScript frameworks, cloud technologies, and agile development methodoiogies.
+						I thrive in collaborative environments and am always eager to tackle complex challenges
+						while mentoring junior developers.
+					</p>
 				</div>
 			</div>
 		</div>
@@ -247,12 +278,87 @@ https://templatemo.com/tm-464-ultra-profile
 		<div class="container">
 			<div class="row">
 				<div class="col-md-offset-6 col-md-6 col-sm-offset-6 col-sm-7">
-					<div class="title">
-						<h2>This is <strong>me</strong></h2>
-						<h1 class="tm-red-text">Creative <strong>Director</strong></h1>
+					<h2 class="title">Some <strong>Skills</strong></h2>
+					<h3>Frontent Development</h3>
+					<h4 class="tm-progress-label">React <small class="progress-percent-small">95%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
 					</div>
-					<p>This is free Bootstrap v3.3.4 mobile friendly layout from <a rel="nofollow" href="https://templatemo.com">templatemo</a>. Feel free to use it for your website. Credit goes to <a rel="nofollow" href="https://pixabay.com">Pixabay</a> for photos used in this template. Dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
+					<h4 class="tm-progress-label">Vue.js <small class="progress-percent-small">80%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+					</div>
+					<h4 class="tm-progress-label">Angular <small class="progress-percent-small">85%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
+					</div>
+					<h4 class="tm-progress-label">TypeScript <small class="progress-percent-small">92%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100" style="width: 92%;"></div>
+					</div>
+					<h4 class="tm-progress-label">JavaScript <small class="progress-percent-small">98%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100" style="width: 98%;"></div>
+					</div><br>
+					<h3>Backend Development</h3>
+					<h4 class="tm-progress-label">Node.js <small class="progress-percent-small">92%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100" style="width: 92%;"></div>
+					</div>
+					<h4 class="tm-progress-label">Python <small class="progress-percent-small">78%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100" style="width: 78%;"></div>
+					</div>
+					<h4 class="tm-progress-label">Java <small class="progress-percent-small">82%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="82" aria-valuemin="0" aria-valuemax="100" style="width: 82%;"></div>
+					</div>
+					<h4 class="tm-progress-label">Express.js <small class="progress-percent-small">90%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+					</div>
+					<h4 class="tm-progress-label">GraphQL <small class="progress-percent-small">75%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
+					</div>
+					<h3>DevOps & Cloud</h3>
+					<h4 class="tm-progress-label">AWS <small class="progress-percent-small">85%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
+					</div>
+					<h4 class="tm-progress-label">Docker <small class="progress-percent-small">90%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+					</div>
+					<h4 class="tm-progress-label">Kubernetes <small class="progress-percent-small">75%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
+					</div>
+					<h4 class="tm-progress-label">CI/CD <small class="progress-percent-small">88%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100" style="width: 88%;"></div>
+					</div>
+					<h4 class="tm-progress-label">Terraform <small class="progress-percent-small">70%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
+					</div>
+					<h3>Database</h3>
+					<h4 class="tm-progress-label">PostgreSQL <small class="progress-percent-small">85%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+					</div>
+					<h4 class="tm-progress-label">MongoDB <small class="progress-percent-small">80%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+					</div>
+					<h4 class="tm-progress-label">Redis <small class="progress-percent-small">75%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+					</div>
+					<h4 class="tm-progress-label">MySQL <small class="progress-percent-small">78%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+					</div>
 				</div>
 			</div>
 		</div>
