--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ https://templatemo.com/tm-464-ultra-profile
 			<div class="row">
 				<div class="col-md-2 col-sm-1"></div>
 				<div class="col-md-8 col-sm-10">
-					<h1 class="tm-home-title"><strong>Danny Lucky</strong></h1>
+					<h1 class="tm-home-title" style="color: white;"><strong>Danny Lucky</strong></h1>
 					<h2 class="tm-home-subtitle">Senior Web Developer</h2>
 					<p>
 						Passionate Senior Web Developer with over 12 years of experience crafting innovative digital solutions.
