--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ https://templatemo.com/tm-464-ultra-profile
                 <div class="col-md-6 col-sm-6">
                     <h2 class="title">My <strong>Connect</strong></h2>
                     <p><span class="tm-info-label">Name</span> Danny Lucky</p>
-                    <p><span class="tm-info-label">Birthday</span> March 2, 2000</p>
+                    <p><span class="tm-info-label">Birthday</span> March 2, 1992</p>
                     <p><span class="tm-info-label">Address</span> Denver, CO, United Status</p>
                     <p><span class="tm-info-label">Phone</span> +001 020 0340 | 009 080 0760</p>
                     <p><span class="tm-info-label">Email</span> ldanny2k32@gmail.com</p>
@@ -401,7 +401,7 @@ https://templatemo.com/tm-464-ultra-profile
                         <h1 class="tm-red-text"><strong>Senior</strong> Full Stack Developer </h1>
                         <h2><strong>TechFoward Solutions Inc</strong></h2>
                         <span style="font-size:24px">📍</span> <strong>455 Market Street, San Francisco, CA 94105</strong>
-                        <p>March 2020 - Present( 4+ years )</p>
+                        <p>March 2020 - October 2024( 4+ years )</p>
                         <ul>
                             <li>Led development of 5+ enterprise web applications serving 100K+ users</li>
                             <li>Architected microservices infrastructure reducing system downtime by 45%</li>
