--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ https://templatemo.com/tm-464-ultra-profile
                 <ul class="nav navbar-nav navbar-right main-navigation text-uppercase">
                     <li><a href="#home" class="smoothScroll">Home</a></li>
                     <li><a href="#work" class="smoothScroll">My Services</a></li>
-                    <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
+                    <li><a href="#portfolio" class="smoothScroll">Portfolios</a></li>
                     <li><a href="#grade" class="smoothScroll">Education</a></li>
                     <li><a href="#about" class="smoothScroll">About</a></li>
                     <li><a href="#skills" class="smoothScroll">Skills</a></li>
