--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ https://templatemo.com/tm-464-ultra-profile
                 </div>
                 <p>
                     I'm a results-driven Senior Web Developer with a passion for creating innovative, scalable web applications. With over 12 years of experience in the industry, I've successfully led numerous projects from conception to deployment, working with diverse
-                    teams and cutting-edge technologies. My experitise spans across modern JavaScript frameworks, cloud technologies, and agile development methodoiogies. I thrive in collaborative environments and am always eager to tackle complex challenges
+                    teams and cutting-edge technologies. My expertise spans across modern JavaScript frameworks, cloud technologies, and agile development methodologies. I thrive in collaborative environments and am always eager to tackle complex challenges
                     while mentoring junior developers.
                 </p>
 
@@ -405,8 +405,8 @@ https://templatemo.com/tm-464-ultra-profile
                         <ul>
                             <li>Led development of 5+ enterprise web applications serving 100K+ users</li>
                             <li>Architected microservices infrastructure reducing system downtime by 45%</li>
-                            <li>Mentored team of 8 junior developers and established coding standars</li>
-                            <li>Implemented CI/CD piplines improving deployment efficiency by 60%</li>
+                            <li>Mentored team of 8 junior developers and established coding standards</li>
+                            <li>Implemented CI/CD pipelines improving deployment efficiency by 60%</li>
                         </ul>
                         <hr>
                         <h1 class="tm-red-text"><strong>Senior</strong> Web Developer </h1>
